--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
             <div class="row copyright">
 				<div class="col-md-12 text-center">
 					<p>
-						Website Website Pernikahan Didi Syamhudi dan Mumun Mulyanah<br> ini dibuat oleh <a href="https://abrahamyusuf.my.id/" target="_blank">Abraham Yusuf</a>  					</p>
+						Situs Web Pernikahan Didi Syamhudi dan Mumun Mulyanah<br> ini dibuat oleh <a href="https://abrahamyusuf.my.id/" target="_blank">Abraham Yusuf</a>  					</p>
 					
 				</div>
 			</div>
