--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 	<meta name="keywords" content="Pernikahan Didi Syamhudi dan Mumun Mulyanah, Nikah Online, Webnikah, Nikah Didi Syamhudi, Nikah Mumun Mulyanah">
 
 
-
-	<link href="./css/css" rel="stylesheet" type="text/css">
-	<link href="./css/css(1)" rel="stylesheet">
+	<link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700' rel='stylesheet' type='text/css'>
+	<link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet">
 	<link rel="stylesheet" href="./css/animate.css">
 	<link rel="stylesheet" href="./css/icomoon.css">
 	<link rel="stylesheet" href="./css/bootstrap.css">
@@ -36,7 +35,7 @@
     <meta name="image" property="og:image" content="?">
 	<!-- FOR IE9 below -->
 	<!--[if lt IE 9]>
-	<script src="/template/nikah-nikahbasic/js/respond.min.js"></script>
+	<script src="/js/respond.min.js"></script>
 	<![endif]-->
 
 	</head>
