--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
 	
     <br clear="all"> 
     
-    <link rel="stylesheet" href="./css/style(1).css">
+    <link rel="stylesheet" href="./css/footermenu/style.css">
         <div class="button-menu visible-xs" style="display:none !important;">
     	<div class="button-menu-item">
         	<a href="https://didi-mumun.github.io/undangan/#page" onclick="music();"><span class="fal fa-home"></span><br>Home</a>
