--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<link rel="stylesheet" href="./css/owl.carousel.min.css">
 	<link rel="stylesheet" href="./css/owl.theme.default.min.css">
 	<link rel="stylesheet" href="./css/style.css">
-	<script src="./js/modernizr-2.6.2.min.js.download"></script>
+	<script src="./js/modernizr-2.6.2.min.js"></script>
     
     <meta name="language" content="in,en">
     <meta name="distribution" content="Global">
