--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 	
 	<div id="page"><a href="https://didi-mumun.github.io/undangan/#" class="js-fh5co-nav-toggle fh5co-nav-toggle fh5co-nav-white hidden-xs"><i></i></a><div id="fh5co-offcanvas"><ul>
 		        <li class="active"><a href="https://didi-mumun.github.io/undangan/" onclick="music();">Home</a></li>
-                        <li><a href="https://didi-mumun.github.io/undangan/#fh5co-couple" onclick="music();">Mempelai</a></li>
-                        <li><a href="https://didi-mumun.github.io/undangan/#fh5co-event" onclick="music();">Undangan</a></li>
-                        <li><a href="https://didi-mumun.github.io/undangan/#fh5co-testimonial" onclick="music();">Doa dan Ucapan</a></li>
+                        <li><a href="#fh5co-couple" onclick="music();">Mempelai</a></li>
+                        <li><a href="#fh5co-event" onclick="music();">Undangan</a></li>
+                        <li><a href="#fh5co-testimonial" onclick="music();">Doa dan Ucapan</a></li>
 					</ul></div>
 	<nav class="fh5co-nav" role="navigation">
 		<div class="container">
@@ -56,9 +56,9 @@
 				<div class="col-xs-10 text-right menu-1 hidden-xs">
 					<ul>
 			<li class="active"><a href="https://didi-mumun.github.io/undangan/" onclick="music();">Home</a></li>
-                        <li><a href="https://didi-mumun.github.io/undangan/#fh5co-couple" onclick="music();">Mempelai</a></li>
-                        <li><a href="https://didi-mumun.github.io/undangan/#fh5co-event" onclick="music();">Undangan</a></li>
-                        <li><a href="https://didi-mumun.github.io/undangan/#fh5co-testimonial" onclick="music();">Doa dan Ucapan</a></li>
+                        <li><a href="#fh5co-couple" onclick="music();">Mempelai</a></li>
+                        <li><a href="#fh5co-event" onclick="music();">Undangan</a></li>
+                        <li><a href="#fh5co-testimonial" onclick="music();">Doa dan Ucapan</a></li>
 					</ul>
 				</div>
 			</div>
@@ -103,7 +103,7 @@
                             <div id="timex" style="display:none">04 March 2022 15:00:00</div><br>
                             
                              							
-							<p><a href="https://didi-mumun.github.io/undangan/#fh5co-couple" onclick="music();" class="btn btn-default btn-sm blink">Buka Undangan</a></p>
+							<p><a href="#fh5co-couple" onclick="music();" class="btn btn-default btn-sm blink">Buka Undangan</a></p>
 						</div>
 					</div>
 				</div>
@@ -308,11 +308,11 @@
     <link rel="stylesheet" href="./css/footermenu/style.css">
         <div class="button-menu visible-xs" style="display:none !important;">
     	<div class="button-menu-item">
-        	<a href="https://didi-mumun.github.io/undangan/#page" onclick="music();"><span class="fal fa-home"></span><br>Home</a>
-                <a href="https://didi-mumun.github.io/undangan/#fh5co-couple" onclick="music();"><span class="fal fa-user-friends"></span><br>Mempelai</a>
-                <a href="https://didi-mumun.github.io/undangan/#fh5co-event" onclick="music();"><span class="fal fa-envelope"></span><br>Undangan</a>
-                <a href="https://didi-mumun.github.io/undangan/#fh5co-testimonial" onclick="music();"><span class="fal fa-comment-alt-smile"></span><br>Ucapan</a>
-                <a href="https://didi-mumun.github.io/undangan/#fh5co-footer" onclick="music();"><span class="fal fa-heartbeat"></span><br>Protokol</a>
+        	<a href="/#page" onclick="music();"><span class="fal fa-home"></span><br>Home</a>
+                <a href="#fh5co-couple" onclick="music();"><span class="fal fa-user-friends"></span><br>Mempelai</a>
+                <a href="#fh5co-event" onclick="music();"><span class="fal fa-envelope"></span><br>Undangan</a>
+                <a href="#fh5co-testimonial" onclick="music();"><span class="fal fa-comment-alt-smile"></span><br>Ucapan</a>
+                <a href="#fh5co-footer" onclick="music();"><span class="fal fa-heartbeat"></span><br>Protokol</a>
         </div>
     </div>
 
